1.8.0: Complete Plugin Reorganization